repoze.sphinx.autointerface Changelog
=====================================

0.5 (unreleased)
----------------


0.4 (2010-07-26)
----------------

- Fixed compatibility with Sphinx 1.0

- Un-break PyPI ReST/HTML-rendering again.


0.3 (2009-10-25)
----------------

- Refactor sphinx integration. There are now separate ``autointerface``
  and ``interface`` directives.

0.2.1 (2009-08-20)
------------------

- Fix add_directive arguments to work with Sphinx 0.6.1, now required.

0.1.3 (2009-01-14)
------------------

- Coerce unicode path elements to str in ``_resolve_dotted_name``.
  Note that non-ASCII path elements won't work:  this fix just deals
  with the case where the path was of type unicode.

- Fixed spelling of directive in README.txt.

- Added dependency on ``zope.interface``.

0.1.2 (2008-10-03)
------------------

- Packaging change:  improved description in README.txt.

0.1.1 (2008-10-03)
------------------

- Packaging bug:  the ``long_description`` was not rendering properly to
  HTML on PyPI.

0.1 (2008-10-02)
----------------

- Initial release.